@@ -1993,6 +1993,37 @@ dl_speed
 </p>
 </dd>
 <dt>
+sc_avg_speed
+</dt>
+<dd>
+<p>
+  The average download speed observed in the previous download in
+  bytes per sec. This value is only updated if the download is done in
+  single connection environment and only used by
+  AdaptiveURISelector. Optional.
+</p>
+</dd>
+<dt>
+mc_avg_speed
+</dt>
+<dd>
+<p>
+  The average download speed observed in the previous download in
+  bytes per sec. This value is only updated if the download is done in
+  multi connection environment and only used by
+  AdaptiveURISelector. Optional.
+</p>
+</dd>
+<dt>
+counter
+</dt>
+<dd>
+<p>
+  How many times the server is used. Currently this value is only used
+  by AdaptiveURISelector.  Optional.
+</p>
+</dd>
+<dt>
 last_updated
 </dt>
 <dd>
@@ -2227,7 +2258,7 @@ files in the program, then also delete it here.</p></div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2009-02-14 18:27:19 JST
+Last updated 2009-02-14 18:43:10 JST
 </div>
 </div>
 </body>
